--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,29 @@
+
 <!DOCTYPE html>
 <html>
-<head>
-    <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
-</head>
-<body>
-<div>
-    <button id="button"> where should we eat </button>
-    <p id="foodPlace"> </p>
-</div>
-<script  type="text/javascript">
-    window.onload = function (){
-        document.getElementById("button").onclick = function() {
-            $.ajax({
-                url: 'getFood',
-                dataType: 'text',
-                type: 'GET',
-                success: function(foodPlace){
-                    document.getElementById("foodPlace").innerHTML = "food: " + foodPlace;
-                }.bind(this),
-                error: function(xhr, status, err){
-                    console.error("", status, err.toString());
-                }.bind(this)
-            });
-        };
-    }
-</script>
-</body>
-</html>
+	<head>
+        <title>Lunch Dilemma</title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <script src="scripts.js" type="text/javascript" charset="utf-8"></script>
+		<script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+	</head>
+	<body style="background-color: #808080 ">
+	<h1 class="siteTitle">&#1491;&#1497;&#1500;&#1502;&#1514; &#1492;&#1510;&#1492;&#1512;&#1497;&#1497;&#1501; &#1492;&#1497;&#1493;&#1502;&#1497;&#1514;</h1> 
+		
+		<div id="shiraz">
+			<img src="http://lunchtime.uphero.com/img/shirCrop.PNG"/>
+		</div>
+		<div id="baloonElement">
+		<div class="baloonImage">
+			<div class="restStyle"">
+				<p id="baloonText"></p>
+			</div>
+		</div>
+		</div>
+		<div id="buttonContainer">
+			<button class="btn" dir="rtl" lang="ar" onclick="setRandomRestaurant()">&#1488;&#1494; &#1502;&#1492; &#1488;&#1493;&#1499;&#1500;&#1497;&#1501; &#1513;&#1497;&#1512;&#1494;?</button>
+		
+			<button class="btn" dir="rtl" lang="ar" onclick="setRandomPopsicle()">&#1499;&#1489;&#1488;&#1512;&#1496;&#1497;&#1511;?</button>
+		</div>
+	</body>
+</html> 
