--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
 			</div>
 		</div>
 		</div>
+		<div id="alternativeFood">
+			<h1>Or maybe:</h1>
+			<h1 id="altText"></h1>
+		</div>
 		<div id="buttonContainer">
 			<button class="btn" dir="rtl" lang="ar" onclick="setRandomRestaurant()">&#1488;&#1494; &#1502;&#1492; &#1488;&#1493;&#1499;&#1500;&#1497;&#1501; &#1513;&#1497;&#1512;&#1494;?</button>
 		
